Bug 1313058 - Fix SetValueCurveAtTime interpolation; r=padenot

This interpolates over aCurveLength - 1 steps rather than over
aCurveLength steps as was done before.

Previously we would reach the final value on the curve before
the end of the specified duration. For example, on the curve
[1.0, 0.0] with duration 1000, we would interpolate from 1.0 to
0.0 by time 500 rather than time 1000. With these changes, we
don't reach 0.0 until time 1000, as expected.

This also updates TestSpecExample in TestAudioEventTimeline.cpp
to match the curve in the latest spec.

MozReview-Commit-ID: Cgs8csbRUMh

--HG--
extra : rebase_source : 1960128558ae9174933cd5be3c1fbfcb79f5ba1d